Fixed hidden blog posts date on mobile style

--- a/syte/static/less/styles-mobile.less
+++ b/syte/static/less/styles-mobile.less
@@ -101,6 +101,7 @@
          padding: 5px 0;
          border: 0;
          font-weight: 300;
+         display: block;
       }
     }
 
